<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/bg_card_view"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="28dp">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="14dp"
        android:src="@drawable/item_exit_popup" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="14dp"
        android:fontFamily="@font/floney_pretendard_bold"
        android:text="@string/mypage_main_inform_exit_popup_title"
        android:textAppearance="@style/login_popup_text1" />

    <TextView
        android:id="@+id/id_already"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/floney_pretendard_regular"
        android:gravity="center"
        android:paddingBottom="14dp"
        android:text="@string/mypage_main_inform_exit_popup_text1"
        android:textAppearance="@style/login_popup_text2" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="1dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_exit"
            android:layout_width="124dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_background2"
            android:fontFamily="@font/floney_pretendard_bold"
            android:text="@string/mypage_main_inform_exit_popup_btn_exit"
            android:textAllCaps="false"
            android:textAppearance="@style/mypage_wallet_count"
            android:textSize="13sp"
            android:elevation="0dp"
            android:stateListAnimator="@null" />
        <View
            android:layout_width="12dp"
            android:layout_height="0dp"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_delete"
            android:layout_width="124dp"
            android:layout_height="wrap_content"
            android:background="@drawable/onboard_area1"
            android:fontFamily="@font/floney_pretendard_bold"
            android:text="@string/mypage_main_inform_exit_popup_btn_cancel"
            android:textAllCaps="false"
            android:textAppearance="@style/start_button"
            android:textSize="13sp"
            android:stateListAnimator="@null"/>
    </LinearLayout>


</LinearLayout>